Tablet Support, Loading Performance issues